@@ -1,13 +1,14 @@
 script.skinshortcuts was written with the intention of making user customizable shortcuts on the home page easier for skinners.
 
 
-What's New for Skinners (version 0.5.4 - git version)
+What's New for Skinners (version 0.6.1 - git version)
 -----------------------
 
 - Ability to include multiple $SKINSHORTCUT[] elements and other text in an element
 - New <content>addon-program-plugin</content> for groupings and related widget-selection support
+- More options for setting a custom property - see "Advanced Usage.txt", section "Overrides.xml", part 9
 
-What's New for Skinners (version 0.5.3 - repo version)
+What's New for Skinners (version 0.6.0 - repo version)
 -----------------------
 
  - Add additional actions on a per-menu basis - see "Advanced Usage.txt", section "Overrides.xml", part 16
